compatibility-tests/compile-fail/tests/ui/duplication-source-from-attributes.stderr
error: Multiple `source` attributes are not supported on a field
 --> tests/ui/duplication-source-from-attributes.rs:8:17
  |
8 |         #[snafu(source(from(EnumError, Box::new)))]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
